<resources>
    <string name="app_name">FeedApp</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dummy_text">Utsav Shrestha</string>
    <string name="upload">Select Image</string>
    <string name="dummy_status">Hello this is dummy status</string>
</resources>
